--- a/pages/video-player/index.html
+++ b/pages/video-player/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <title>JSExpert Max - BlinkToPlay</title>
   <style>
     video {
@@ -15,6 +16,19 @@
 </head>
 
 <body>
+  <section style="display: flex;justify-content: space-evenly; padding: 5%;">
+    <div>
+      <button class="btn btn-primary btn-sm disabled" disabled id="initialize">Initialize Blink Detector</button>
+    </div>
+    <div id="video">
+      <video id="video-mp4" src="/assets/video.mp4" controls></video>
+    </div>
+    <div>
+      <ul class="list-group" id="logs">
+
+      </ul>
+    </div>
+  </section>
   <script src="./src/index.js" type="module"></script>
 </body>
 
